--- a/src/main/webapp/assets/css/styles.css
+++ b/src/main/webapp/assets/css/styles.css
@@ -22,6 +22,17 @@ button, input {
   border-bottom:1px solid grey;
 }
 
+.triangle {
+    width: 1;
+    height: 1;
+    border: solid 3px;
+    border-color: transparent transparent black transparent;
+}
+
+.fas fa-pencil-alt:hover {
+	transform: scale(1.5);
+}
+
 .login-clean {
   /*background:#f1f7fc;*/
   padding:80px 0;
